# adiantum

./: Cargo.toml  README.md
src/: construction.rs  lib.rs  nh.rs  tests.rs
src/test_data/: compressed.json
