[package]
name = "adiantum"
version = "0.1.1"
edition = "2021"
description = "A Rust implementation of the Adiantum cipher, a fast encryption scheme optimized for mobile and embedded devices, designed by Google."
license = "MIT"
keywords = ["cryptography", "cipher", "encryption", "decryption", "adiantum"]
categories = ["cryptography", "no-std", "embedded"]
homepage = "https://github.com/vlad9486/adiantum"
repository = "https://github.com/vlad9486/adiantum"
readme = "README.md"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
hex = { version = "0.4.3" }
chacha20 = { version = "0.9.1", default-features = false }
aes = { version = "0.8.4", default-features = false }

[dependencies]
cipher = { version = "0.4.4" }
poly1305 = { version = "0.8.0", default-features = false }
zeroize = { version = "1.8" }
